# automata-toolkit

./: .gitignore  BDX4-20.txt  BDX4-22.txt  BDX4-28.txt  BDX4-29.txt  BDX4-38.txt  BDX4-39.txt  BDX4-42.txt  README.md  graph.dot  main.py  pyproject.toml
.github/workflows/: ci.yml
data/expected/: deterministic_cases.json  minimized_cases.json  recognition_cases.json
data/raw/efrei_test_cases/: BDX4-37.txt  sample_automaton.txt
docs/: EFREI-23-24-L2 Automates finis et expressions rationnelles Projet.doc  algorithms.md  architecture.md  file-format.md  limitations.md
scripts/: generate_graphs.py  run_demo.sh
src/automata_toolkit/: __init__.py
src/automata_toolkit/cli/: main.py
src/automata_toolkit/domain/: automaton.py
src/automata_toolkit/parsers/: dto.py  txt_parser.py
src/automata_toolkit/renderers/: console_renderer.py  graphviz_renderer.py  json_renderer.py
src/automata_toolkit/services/: complement.py  completion.py  determinization.py  minimization.py  recognition.py  standardization.py
src/automata_toolkit/validators/: completeness.py  determinism.py  integrity.py  standardness.py
tests/integration/: test_cli_workflows.py
tests/unit/: test_complement.py  test_completion.py  test_determinism.py  test_determinization.py  test_integrity.py  test_minimization.py  test_parser.py  test_recognition.py  test_standardization.py
