[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automata-toolkit"
version = "0.1.0"
description = "Toolkit for parsing, validating, transforming, and testing finite automata."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Mathieu Alassoeur" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0"
]

[project.scripts]
automata-cli = "automata_toolkit.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
